<resources>
    // General
    <string name="app_name">Loanppi</string>
    <string name="Loanppi_logo">Loanppi Logo</string>

    // Landing view
    <string name="btn_signUp">Regístrate</string>
    <string name="btn_login">Inicia sesión</string>

    // Signup view
    <string name="signup_title">Registro</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_google">Google</string>
    <string name="btn_investor">Inversor</string>
    <string name="btn_worker">Trabajador</string>
    <string name="register_with">Regístrate con</string>
    <string name="back">&lt;</string>
    <string name="choose_role">Seleccione un perfil</string>

    // Login view
    <string name="login_title">Inicio de sesión</string>
    <string name="cancel">Cancelar</string>

    // Dashboard: main
    <string name="user_photo">User profile photo</string>
    <string name="balance">Balance</string>
    <string name="history">Historial</string>

    // Investor
    <string name="txt_return">Retorno</string>
    <string name="invest">Invertir</string>
    <string name="my_investments">Mis inversiones</string>

    // Main worker
    <string name="no_loans">Esto está muy vacío por acá\nHaz un préstamo</string>
    <string name="txt_goal">Meta</string>
    <string name="txt_your_weekly_fee">Tu cuota semanal es de:</string>
    <string name="txt_your_fee_number">Esta es tu cuota número:</string>
    <string name="txt_amount_remaining">Te falta por pagar:</string>
    <string name="txt_getting_money">Estamos consiguiendo tu dinero</string>
    <string name="btn_let_pay">Pagar</string>

    // Payment
    <string name="investment_title">Hacer un pago</string>
    <string name="txt_payment_amount_paid">Has pagado:</string>
    <string name="txt_amount_to_pay">Cantidad a pagar</string>

    // Main investor
    <string name="no_invests">Ánimate a ayudar a muchas personas\nHaz una inversión</string>
    <string name="do_investments">Aún puedes ayudar a más personas invirtiendo</string>
    <string name="full_invested_amount">Cantidad total invertida:</string>
    <string name="full_earns">Cantidad total retornada:</string>

    // Menu
    <string name="signout">Cerrar sesión</string>
    <string name="home">Inicio</string>

    // Profile
    <string name="personal_info">Información personal</string>
    <string name="profile">Perfil</string>
    <string name="first_name">Primer nombre</string>
    <string name="second_name">Segundo nombre</string>
    <string name="first_last_name">Primer apellido</string>
    <string name="second_last_name">Segundo apellido</string>
    <string name="document_number">Identificación</string>
    <string name="contact_info">Información de contacto</string>
    <string name="phone_number">Número celular</string>
    <string name="email">Correo electrónico</string>
    <string name="home_address">Dirección</string>
    <string name="save">Guardar</string>
    <string-array name="documents_type">
        <item>Tipo de documento</item>
        <item>Cédula</item>
        <item>Pasaporte</item>
        <item>Cédula de extranjería</item>
    </string-array>

    // Lend
    <string-array name="lend_reason">
        <item>¿En qué lo vas a utilizar?</item>
        <item>Comprar moto</item>
        <item>Comprar SOAT</item>
        <item>Renovar licencia</item>
        <item>Renovar tecnomecánica</item>
        <item>Reparación de vehículo</item>
    </string-array>

    // Invest
    <string name="invest_title">Nueva inversión</string>
    <string name="moneyToInvest">$0,000,000</string>
    <string name="amountRemaining">$0,000,000</string>
    <string name="returnTime">12 meses</string>

    // Login with Facebook
    <string name="facebook_app_id">245844573146164</string>
    <string name="fb_login_protocol_scheme">fb245844573146164</string>
    
    
    // Icon test
    <string name="icon_home">&#xf447;</string>
    <string name="icon_profile">&#xf47d;</string>
    <string name="icon_lend">&#xf352;</string>
    <string name="icon_my_loan">&#xf3ed;</string>
    <string name="icon_invest">&#xf4a5;</string>
    <string name="icon_my_investments">&#xf3ed;</string>

    // Dashboard buttons
    <string name="txt_home">Inicio</string>
    <string name="txt_profile">Perfil</string>
    <string name="txt_lend">Prestar</string>
    <string name="txt_my_loan">Mi préstamo</string>
    <string name="txt_invest">Invertir</string>
    <string name="txt_my_investments">Mis inversiones</string>
</resources>
