<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_inside"
            android:paddingBottom="16dp"
            tools:context=".profile">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user_photo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/user_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_profile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/profile"
                android:textColor="@color/textPrimary"
                app:autoSizeTextType="uniform"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_user_photo"
                app:layout_constraintWidth_percent="0.3" />

            <TextView
                android:id="@+id/txt_personal_info"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/personal_info"
                android:textColor="@color/textPrimary"
                app:autoSizeTextType="uniform"
                app:layout_constraintHeight_percent="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_profile"
                app:layout_constraintWidth_percent="0.5" />

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"

                android:backgroundTint="@color/loanppi"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColorHighlight="#FF7054"
                android:textColorLink="@color/loanppi"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toStartOf="@+id/edit_second_name"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_personal_info"
                app:layout_constraintWidth_percent="0.4" />

            <EditText
                android:id="@+id/edit_second_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/second_name"
                android:inputType="textPersonName"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/edit_first_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_personal_info"
                app:layout_constraintWidth_percent="0.4" />

            <EditText
                android:id="@+id/edit_first_last_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/first_last_name"
                android:inputType="textPersonName"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toStartOf="@+id/edit_second_last_name"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_first_name"
                app:layout_constraintWidth_percent="0.4" />

            <EditText
                android:id="@+id/edit_second_last_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/second_last_name"
                android:inputType="textPersonName"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintStart_toEndOf="@+id/edit_first_last_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_second_name"
                app:layout_constraintWidth_percent="0.4" />

            <Spinner
                android:id="@+id/spin_id_type"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:entries="@array/documents_type"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toStartOf="@+id/edit_id_document"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_first_last_name"
                app:layout_constraintWidth_percent="0.4" />

            <EditText
                android:id="@+id/edit_id_document"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/document_number"
                android:inputType="textPersonName"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintStart_toEndOf="@+id/spin_id_type"
                app:layout_constraintTop_toBottomOf="@+id/edit_second_last_name"
                app:layout_constraintWidth_percent="0.4" />

            <TextView
                android:id="@+id/txt_contact_info"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="Información de contacto"
                android:textColor="@color/textPrimary"
                app:autoSizeTextType="uniform"
                app:layout_constraintHeight_percent="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_id_type"
                app:layout_constraintWidth_percent="0.7" />

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toStartOf="@+id/edit_email_address"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_contact_info"
                app:layout_constraintWidth_percent="0.4" />

            <EditText
                android:id="@+id/edit_email_address"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:enabled="false"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintStart_toEndOf="@+id/edit_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/txt_contact_info"
                app:layout_constraintWidth_percent="0.4" />

            <EditText
                android:id="@+id/edit_home_address"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/home_address"
                android:inputType="textPostalAddress"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="@+id/edit_email_address"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintStart_toStartOf="@+id/edit_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/edit_phone_number"
                app:layout_constraintWidth_percent="0.4" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_background_white"
                android:text="@string/save"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_home_address"
                app:layout_constraintWidth_percent="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>