<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/payment_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:autoSizeTextType="uniform"
        android:text="Hacer un pago"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/txt_payment_your_weekly_fee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_your_weekly_fee"
        android:textAlignment="viewEnd"
        android:textColor="@color/textPrimary"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/txt_payment_value_your_weekly_fee"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_payment_amount_remaining"
        app:layout_constraintWidth_percent="0.55" />

    <TextView
        android:id="@+id/txt_payment_amount_paid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_payment_amount_paid"
        android:textAlignment="viewEnd"
        android:textColor="@color/textPrimary"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/txt_payment_your_weekly_fee"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@+id/txt_payment_your_weekly_fee"
        app:layout_constraintTop_toBottomOf="@+id/payment_title"
        app:layout_constraintWidth_percent="0.55" />

    <TextView
        android:id="@+id/txt_payment_amount_remaining"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_amount_remaining"
        android:textAlignment="viewEnd"
        android:textColor="@color/textPrimary"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/txt_payment_amount_paid"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@+id/txt_payment_amount_paid"
        app:layout_constraintTop_toBottomOf="@+id/txt_payment_amount_paid"
        app:layout_constraintWidth_percent="0.55" />

    <TextView
        android:id="@+id/txt_payment_value_your_weekly_fee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="$00,000"
        android:textColor="@color/textPrimary"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/txt_payment_your_weekly_fee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toEndOf="@+id/txt_payment_your_weekly_fee"
        app:layout_constraintTop_toTopOf="@+id/txt_payment_your_weekly_fee"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/txt_payment_value_amount_paid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="$0,000,000"
        android:textColor="@color/textPrimary"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/txt_payment_amount_paid"
        app:layout_constraintEnd_toEndOf="@+id/txt_payment_value_your_weekly_fee"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@+id/txt_payment_value_your_weekly_fee"
        app:layout_constraintTop_toTopOf="@+id/txt_payment_amount_paid"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/txt_payment_value_amount_remaining"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="$0,000,000"
        android:textColor="@color/textPrimary"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/txt_payment_amount_remaining"
        app:layout_constraintEnd_toEndOf="@+id/txt_payment_value_amount_paid"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@+id/txt_payment_value_amount_paid"
        app:layout_constraintTop_toTopOf="@+id/txt_payment_amount_remaining"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/edit_pay_amount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/loanppi"
        android:inputType="number"
        android:maxLength="7"
        android:textAlignment="center"
        android:textColorHighlight="#FF7054"
        android:textColorLink="@color/loanppi"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_payment_your_weekly_fee"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/txt_pay_amount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/txt_amount_to_pay"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/edit_pay_amount"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="@+id/edit_pay_amount"
        app:layout_constraintTop_toBottomOf="@+id/edit_pay_amount"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/btn_let_pay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_background_white"
        android:text="@string/btn_let_pay"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pay_amount"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>